--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
     crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css">
+    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <script src="scripts.js"></script>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One|Amaranth|Anton|Baloo|Baloo+Bhai|Bowlby+One+SC|Calistoga|Concert+One|Fredoka+One|Fugaz+One|IBM+Plex+Mono|Modak|Pangolin|Rubik+Mono+One|Special+Elite|Varela+Round|Viga&display=swap" rel="stylesheet">   
     <link rel="icon" href="img\kay(unbeatable).png"> 
     <title>portfolio</title>
@@ -19,19 +20,107 @@
     background-repeat: no-repeat;
     width: 100%;
     background-size: cover;
+    margin-top: 10px;
+}
+body
+{
+    background-image: url("img/drd.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: scroll;
+}
+* {box-sizing: border-box}
+
+/* Set height of body and the document to 100% */
+body, html {
+  height: 100%;
+  margin: 0;
+  font-family: Arial;
+}
+
+/* Style tab links */
+.tablink {
+  background-color: #555;
+  color: white;
+  float: left;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 14px 16px;
+  font-size: 17px;
+  width: 25%;
+}
+
+.tablink:hover {
+  background-color: #777;
+}
+
+/* Style the tab content (and add height:100% for full page content) */
+.tabcontent {
+  color: white;
+  display: none;
+  padding: 100px 20px;
+  height: 100%;
 }
 </style>
 <body>
+    
+    <button class="tablink" style="color: lawngreen;">Home</button>
+<button class="tablink" style="color: lawngreen;">Social Media</button>
+<button class="tablink" style="color: lawngreen;">Contact</button>
+<button class="tablink" style="color: lawngreen;">About</button>
+
+<div id="Home" class="tabcontent">
+  <h3>Home</h3>
+  <p>Home is where the heart is..</p>
+</div>
+
+<div id="News" class="tabcontent">
+  <h3>Social Media</h3>
+  <p>Some news this fine day!</p> 
+</div>
+
+<div id="Contact" class="tabcontent">
+  <h3>Contact</h3>
+  <p>Get in touch, or swing by for a cup of coffee.</p>
+</div>
+
+<div id="About" class="tabcontent">
+  <h3>About</h3>
+  <p>Who we are and what we do.</p>
+</div>
+
     <div class="dashbo">
         <p>
-            <h1 style="text-align: center;"><br><br><Br>
+            <h1 style="text-align: center; font-family: 'Rubik Mono One', sans-serif; color:greenyellow;"><br><br><Br>
                 Kevin Raphael <br></h1>
-                <span class="intro"><p style="text-align: center;"> < Content Developer /></p></span>
+                <span class="intro"><p style="text-align: center; color: greenyellow;"> < Content Developer /></p></span>
         </p>
     </div>
-    <div class="jumbtron">
-
-    </div>
-       
+    <!-- <div class="bdx" style="color: hotpink;">
+<p style="text-align: center; font-family: 'Calistoga', cursive; font-size: xx-large; color: greenyellow;">
+    Hello I am a Content-Developer from Nairobi Kenya
+</p> 
+</div> -->
+<!-- <script>
+function openPage(pageName,elmnt,color) {
+    var i, tabcontent, tablinks;
+    tabcontent = document.getElementsByClassName("tabcontent");
+    for (i = 0; i < tabcontent.length; i++) {
+      tabcontent[i].style.display = "none";
+    }
+    tablinks = document.getElementsByClassName("tablink");
+    for (i = 0; i < tablinks.length; i++) {
+      tablinks[i].style.backgroundColor = "";
+    }
+    document.getElementById(pageName).style.display = "block";
+    elmnt.style.backgroundColor = color;
+  }
+  
+  // Get the element with id="defaultOpen" and click on it
+  document.getElementById("defaultOpen").click();
+  document.getElementById("defaultClose").click();
+  </script> -->
+</div>
 </body>
 </html>
