--- a/index.html
+++ b/index.html
@@ -16,11 +16,7 @@
 </head>
 <style>
 .dashbo{
-    background-image: url("img/dta.jpg");
-    background-repeat: no-repeat;
-    width: 100%;
-    background-size: cover;
-    margin-top: 10px;
+    border-radius: 8px;
 }
 body
 {
@@ -45,7 +41,7 @@ body, html {
   float: left;
   border: none;
   outline: none;
-  cursor: pointer;
+  cursor: progress;
   padding: 14px 16px;
   font-size: 17px;
   width: 25%;
@@ -95,7 +91,7 @@ body, html {
             <h1 style="text-align: center; font-family: 'Rubik Mono One', sans-serif; color:greenyellow;"><br><br><Br>
                 Kevin Raphael <br></h1>
                 <span class="intro"><p style="text-align: center; color: greenyellow;"> < Content Developer /></p></span>
-        </p>
+        </p><br>
     </div>
     <!-- <div class="bdx" style="color: hotpink;">
 <p style="text-align: center; font-family: 'Calistoga', cursive; font-size: xx-large; color: greenyellow;">
