added border boxproperties to header 1

--- a/index.html
+++ b/index.html
@@ -15,8 +15,20 @@
     <title>portfolio</title>
 </head>
 <style>
-.dashbo{
-    border-radius: 8px;
+.dashbo{ 
+    font-weight: bold;
+  border: 8px solid gray;
+  position: absolute;
+  top: 35%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1;
+  width: 40%;
+  height: 40%;
+  text-align: center;
+  background-color:transparent;
+  border-radius: 18px;
+
 }
 body
 {
@@ -88,7 +100,7 @@ body, html {
 
     <div class="dashbo">
         <p>
-            <h1 style="text-align: center; font-family: 'Rubik Mono One', sans-serif; color:greenyellow;"><br><br><Br>
+            <h1 style="text-align: center; font-family: 'Rubik Mono One', sans-serif; color:greenyellow;"><br>
                 Kevin Raphael <br></h1>
                 <span class="intro"><p style="text-align: center; color: greenyellow;"> < Content Developer /></p></span>
         </p><br>
