added responsive effect to div intro

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ body, html {
 <body>
     
     <button class="tablink" style="color: lawngreen;">Home</button>
-<button class="tablink" style="color: lawngreen;">Social Media</button>
+<button class="tablink" style="color: lawngreen;">Social</button>
 <button class="tablink" style="color: lawngreen;">Contact</button>
 <button class="tablink" style="color: lawngreen;">About</button>
 
@@ -100,9 +100,9 @@ body, html {
 
     <div class="dashbo">
         <p>
-            <h1 style="text-align: center; font-family: 'Rubik Mono One', sans-serif; color:greenyellow;"><br>
+            <h1 style="text-align: center; font-family: 'Rubik Mono One', sans-serif; color:greenyellow; font-size:3vw;"><br><br>
                 Kevin Raphael <br></h1>
-                <span class="intro"><p style="text-align: center; color: greenyellow;"> < Content Developer /></p></span>
+                <span class="intro"><p style="text-align: center; color: greenyellow; font-size:3vw;"> < Content Developer /></p></span>
         </p><br>
     </div>
     <!-- <div class="bdx" style="color: hotpink;">
