added images to toggle

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   }
 
   body {
-    background-image: url("img/drd.jpg");
+    background-image: url("css/drd.jpg");
     background-repeat: no-repeat;
     background-size: cover;
   }
@@ -124,8 +124,41 @@
           < </p1> Content Developer <p2 style="color: gray"> />
       </p2>
     
-    </p><br>
+    </p><br><br><br>
   </div>
+  <div class="row">
+    <div class="col-sm-4">
+        <div class="desg">
+            <img src="img/edctn.jpg">
+            <h3><strong>DESIGN</strong></h3>
+            <p>Our Design practise offers a full range of services including brand strategy,interaction and
+                visual design and user experience testing</p>
+            <p>Throughout your project,our designers create and implement visual design and
+                workflows,solicit user feedback and work with you to make sure what gets built is wahat is
+                needed</p>
+
+        </div>
+    </div>
+    <div class="col-sm-4">
+        <div class="devp">
+            <img src="img/fishng.jpg">
+            <h3><strong>DEVELOPMENT</strong></h3>
+            <p> All engineers are fluent in the latest enterprise, mobile and web development technologies.
+                They collaborate with your team to write, and improve code on a daily basis, using proven
+                practices such as test-driven development and
+                pair programming.</p>
+        </div>
+    </div>
+    <div class="col-sm-4">
+        <div class="prd">
+            <img src="img/skils.jpg">
+            <h3><strong>PRODUCT MANAGEMENT</strong></h3>
+            <p>Planning and development is iterative. Because we are constantly coding and testing, the
+                products we build are always ready to go live.</p>
+            <p>This iterative process allows for changes as business requirements evolve.</p>
+        </div>
+    </div>
+</div><br><br><br>
   <!-- <div class="bdx" style="color: hotpink;">
 <p style="text-align: center; font-family: 'Calistoga', cursive; font-size: xx-large; color: greenyellow;">
     Hello I am a Content-Developer from Nairobi Kenya
